force-app/main/default/objects/Building__c/fields/AmountOfPeople__c.field-meta.xml
<CustomField>
    <fullName>AmountOfPeople__c</fullName>
    <label>Amount of people</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>