force-app/main/default/objects/Building__c/fields/InitialCost__c.field-meta.xml
<CustomField>
    <fullName>InitialCost__c</fullName>
    <label>Initial Cost</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>