force-app/main/default/objects/Building__c/validationRules/Positive_height.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_height</fullName>
    <active>true</active>
    <errorConditionFormula>Height__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Height__c</errorDisplayField>
    <errorMessage>Height must be positive</errorMessage>
</ValidationRule>