force-app/main/default/objects/Building__c/validationRules/Positive_InitialCost.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_InitialCost</fullName>
    <active>true</active>
    <errorConditionFormula>InitialCost__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>InitialCost__c</errorDisplayField>
    <errorMessage>Initial cost must be positive</errorMessage>
</ValidationRule>